# dollar_cost_average

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
