[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dollar_cost_average"
version = "0.1.0"
description = "Dollar-Cost Averaging core engine (MVP) with risk modeling and CVaR optimization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Jaejun Shim", email = "jaejun.shim@outlook.com" },
  { name = "Seungju Han"}
]

dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
core = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scipy>=1.13,<2",
  "scikit-learn>=1.4,<2",
  "yfinance>=0.2.40",
  "python-dateutil>=2.9",
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dollar_cost_average"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml", "LICENSE", ".github", ".pre-commit-config.yaml", "tools", "tests"]

[tool.ruff]
line-length = 100
exclude = ["build", "dist", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E","F","I","W","B","UP","SIM","N","C90"]
ignore = ["E501"]
per-file-ignores = { "tests/*" = ["S101"] }

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = true
